public/CSS/styles.css
/* #region base */
body {
  color: #313131;
  background-color: #f5f5f5;
  font-family: "Arimo", sans-serif;
  height: 100vh;
  width: 100vw;
}

a {
  text-decoration: none;
  color: inherit;
}

a:hover {
  color: #b9b9b9;
}

li {
  list-style: none;
}

img {
  width: 100%;
  max-height: 100%;
  object-fit: cover;
}

/* #endregion base */

/* #region layout */

.outside-container {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/* #region header */
header,
nav {
  width: 100%;
  min-width: 200px;
  margin-bottom: 5px;
}

nav {
  display: flex;
  flex-direction: column;
}

.nav__top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 1rem;
  padding-right: 1.5rem;
  padding-left: 1rem;
}

.nav__title {
  font-size: medium;
  font-weight: bold;
  color: #313131;
}

/* #endregion header */

/* #region main */
main {
  display: flex;
  flex-direction: column;
}

.main__left {
  border-right: 3px solid #f5f5f5;
  display: flex;
  flex-direction: column;
}

.main__main-image {
  height: 100%;
}

.main__right-top {
  border-bottom: 3px solid #f5f5f5;
}

.main__bottom {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding: 2rem 0 2rem 1.5rem;
  font-weight: bold;
  background-color: #f5f5f5;
}

.main__right-title {
  font-size: 0.975rem;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 1.5rem;
}
/* #endregion main */

/* #endregion layout */

/* #region modules */
.none {
  display: none;
}
/* #endregion modules */

/* #region media queries */
@media only screen and (min-width: 768px) and (max-width: 1024px) {
  /* #region base */

  /* #endregion base */

  /* #region layout */

  /* #region header */

  /* #endregion header */

  /* #region main */
  .main__left {
    position: relative;
  }

  .main__main-image {
    height: 100%;
  }

  .main__bottom {
    bottom: 0;
    right: 0;
    justify-content: space-between;
    padding-right: 1.5rem;
    height: 20%;
    width: 50%;
  }

  .main__right-title {
    font-size: 1.2rem;
  }
  /* #endregion main */

  /* #endregion layout */

  /* #region modules */
  .md-block {
    display: block;
  }

  .md-none {
    display: none;
  }

  .md-absolute {
    position: absolute;
  }

  .md-relative {
    position: relative;
  }
  /* #endregion modules */
}

@media only screen and (min-width: 1024px) {
  /* #region base */

  /* #endregion base */

  /* #region layout */

  .outside-container {
    flex-direction: row;
    max-height: 99%;
    max-width: 99%;
  }

  /* #region header */
  header,
  nav {
    height: 100%;
    max-width: 200px;
  }

  .nav__top {
    flex-direction: column;
    flex-grow: 1;
    align-items: flex-start;
    padding-left: 1.5rem;
  }

  .nav__categories li {
    margin-bottom: 20px;
  }

  .nav__menu {
    display: flex;
  }

  .nav__bars-icon {
    margin-right: 10px;
  }

  .nav__bottom {
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: flex-start;
    flex-grow: 1;
    padding-left: 1.5rem;
    padding-bottom: 1.5rem;
  }

  .nav__social li {
    margin-top: 10px;
  }

  /* #endregion header */

  /* #region main */
  main {
    flex-direction: row;
  }

  .main__right {
    display: flex;
    flex-direction: column;
    justify-content: stretch;
  }

  .main__bottom {
    flex-grow: 1;
  }
  /* #endregion main */

  /* #region footer */
  .footer__nav {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-content: flex-end;
  }

  .nav__circle-item {
    display: block;
    color: #313131;
    background-color: #f5f5f5;
    border-radius: 50%;
    height: 30px;
    width: 30px;
    line-height: 30px;
    text-align: center;
  }

  .nav__cart {
    color: #ffffff;
    background-color: gray;
  }
  /* #endregion footer */

  /* #endregion layout */

  /* #region modules */
  .dt-block {
    display: block;
  }

  .dt-none {
    display: none;
  }
  /* #endregion modules */
}

/* #endregion media queries */

